# ffmpeg_opengl_player

./: Cargo.toml  README.md  demo.txt
src/: audio.rs  config.rs  fragment_shader.glsl  main.rs  player.rs  renderer.rs  vertex_shader.glsl  video.rs
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
